# ga4dataapi2pg

./: .gitignore  README.md  pyproject.toml
ga4dataapi2pg/: auth.py  cli.py  config.py  dataapi_reader.py  postgres_writer.py
